--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.7.0'
 
-
+    runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
